--- a/front-end/src/componentes/style.css
+++ b/front-end/src/componentes/style.css
@@ -135,6 +135,7 @@
 }
 
 .textoBlocoHome {
+    display: flex;
     color: #FFF;
     text-align: center;
     font-size: 32px;
@@ -142,4 +143,10 @@
     font-weight: 400;
     line-height: normal;
     margin-left: 30px;
+    margin-top: 64px;
+}
+
+.logoUnB{
+    margin-left: 64px;
+    margin-top: 20px;
 }
